# backend

./: .gitignore  db.sqlite3  pyproject.toml  readme.md
hack/: settings.py  urls.py
main/: apps.py  auth_backend.py  dashboard.py  renderers.py
main/admin/: custom.py  full.py
main/migrations/: 0001_initial.py
main/models/: user.py
main/serializers/: token.py  user.py
main/views/: user.py
med/: admin.py  apps.py  urls.py
med/migrations/: 0001_initial.py  0002_auto_20190727_1554.py  0003_auto_20190727_1641.py  0004_auto_20190727_1838.py  0005_auto_20190728_1035.py  0006_auto_20190728_1056.py  0007_auto_20190728_1150.py  0008_auto_20190728_1436.py
med/models/: __init__.py  answer.py  division.py  doctor.py  hospital.py  patient.py  position.py  question.py  record.py  specialization.py
med/serializers/: doctor.py  hospital.py  patient.py  question.py  record.py  specialization.py
med/views/: doctors.py  hospitals.py  records.py  specializations.py
